[gd_scene load_steps=11 format=2]

[ext_resource path="res://core/audio_bus_level_controllers/AmbienceLevelController.tscn" type="PackedScene" id=1]
[ext_resource path="res://core/audio_bus_level_controllers/SoundLevelController.tscn" type="PackedScene" id=2]
[ext_resource path="res://core/audio_bus_level_controllers/MusicLevelController.tscn" type="PackedScene" id=3]
[ext_resource path="res://core/audio_bus_level_controllers/AudioSettingsHUD.gd" type="Script" id=4]
[ext_resource path="res://interface/themes/General.tres" type="Theme" id=5]
[ext_resource path="res://interface/sfx/button_back.wav" type="AudioStream" id=6]
[ext_resource path="res://core/utils/KeyLabel.tscn" type="PackedScene" id=7]
[ext_resource path="res://core/utils/ButtonKey.tscn" type="PackedScene" id=8]
[ext_resource path="res://interface/sfx/button_click.wav" type="AudioStream" id=9]
[ext_resource path="res://interface/sfx/button_focus_enter.wav" type="AudioStream" id=10]

[node name="AudioSettingsHUD" type="VBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
theme = ExtResource( 5 )
alignment = 1
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="KeyLabel" parent="." instance=ExtResource( 7 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 1920.0
margin_bottom = 68.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "AUDIO"
align = 1
valign = 1

[node name="Spacer" type="Control" parent="."]
margin_top = 72.0
margin_right = 1920.0
margin_bottom = 216.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Music" type="VBoxContainer" parent="."]
margin_top = 220.0
margin_right = 1920.0
margin_bottom = 332.0
mouse_filter = 2

[node name="ButtonKey" parent="Music" instance=ExtResource( 8 )]
margin_right = 1920.0
margin_bottom = 68.0
text = "MUSIC"
press_sfx = ExtResource( 9 )
focus_enter_sfx = ExtResource( 10 )

[node name="MusicLevelController" parent="Music" instance=ExtResource( 3 )]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 0.0
margin_top = 72.0
margin_right = 1920.0
margin_bottom = 112.0
mouse_filter = 2

[node name="Spacer2" type="Control" parent="."]
margin_top = 336.0
margin_right = 1920.0
margin_bottom = 480.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Sfx" type="VBoxContainer" parent="."]
margin_top = 484.0
margin_right = 1920.0
margin_bottom = 596.0
mouse_filter = 2

[node name="ButtonKey" parent="Sfx" instance=ExtResource( 8 )]
margin_right = 1920.0
margin_bottom = 68.0
text = "SFX"
press_sfx = ExtResource( 9 )
focus_enter_sfx = ExtResource( 10 )

[node name="SoundLevelController" parent="Sfx" instance=ExtResource( 2 )]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 0.0
margin_top = 72.0
margin_right = 1920.0
margin_bottom = 112.0
mouse_filter = 2

[node name="Spacer3" type="Control" parent="."]
margin_top = 600.0
margin_right = 1920.0
margin_bottom = 744.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Ambience" type="VBoxContainer" parent="."]
margin_top = 748.0
margin_right = 1920.0
margin_bottom = 860.0
mouse_filter = 2

[node name="ButtonKey" parent="Ambience" instance=ExtResource( 8 )]
margin_right = 1920.0
margin_bottom = 68.0
text = "AMBIENCE"
press_sfx = ExtResource( 9 )
focus_enter_sfx = ExtResource( 10 )

[node name="AmbienceLevelController" parent="Ambience" instance=ExtResource( 1 )]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 0.0
margin_top = 72.0
margin_right = 1920.0
margin_bottom = 112.0
mouse_filter = 2

[node name="Spacer4" type="Control" parent="."]
margin_top = 864.0
margin_right = 1920.0
margin_bottom = 1008.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="BackButton" parent="." instance=ExtResource( 8 )]
margin_top = 1012.0
margin_right = 1920.0
margin_bottom = 1080.0
text = "Back"
press_sfx = ExtResource( 6 )
focus_enter_sfx = ExtResource( 10 )
[connection signal="pressed" from="Music/ButtonKey" to="Music/MusicLevelController" method="enable"]
[connection signal="enabled" from="Music/MusicLevelController" to="." method="_on_MusicLevelController_enabled"]
[connection signal="pressed" from="Sfx/ButtonKey" to="Sfx/SoundLevelController" method="enable"]
[connection signal="enabled" from="Sfx/SoundLevelController" to="." method="_on_SoundLevelController_enabled"]
[connection signal="pressed" from="Ambience/ButtonKey" to="Ambience/AmbienceLevelController" method="enable"]
[connection signal="enabled" from="Ambience/AmbienceLevelController" to="." method="_on_AmbienceLevelController_enabled"]
[connection signal="pressed" from="BackButton" to="." method="_on_BackButton_pressed"]
